fix: flickering on resize

--- a/sass/view3d.sass
+++ b/sass/view3d.sass
@@ -63,6 +63,7 @@
   top: 0
   left: 0
   filter: blur(1em)
+  object-fit: cover
 .noblur
   .view3d-poster
     filter: none
